charts/longhorn/overlays/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.moria-lab.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: moria-lab-cert
